--- a/css/format.css
+++ b/css/format.css
@@ -1,3 +1,40 @@
-body {
-   
+@font-face {
+    font-family: ProFont;
+    src: url(../fonts/ProFont.ttf);
 }
+h1 {
+    text-align: center;
+    color: white;
+    font-size: 19px;
+}
+#footer {
+	color: cyan;
+}
+#imagesMain {
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 400px;
+  text-align: center;
+}
+#imagesMain img {
+  padding: 50px;
+  height: 50px;
+  width: 50px;
+  vertical-align: middle;
+}
+#imagesSocial {
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 75px;
+  text-align: center;
+}
+#imagesSocial img {
+  padding: 5px;
+  height: 25px;
+  width: 25px;
+  vertical-align: middle;
+}
+
+
