--- a/css/format.css
+++ b/css/format.css
@@ -10,12 +10,13 @@ h1 {
 body {
 	background-color: black;
 	background-image: url("../images/wallpaper_glow.jpg");
-	background-size: cover;
-	-o-background-size: cover;
-	-moz-background-size: cover;
-	-webkit-background-size: cover;
-	background-size: 100% 100%;
+//	background-size: cover;
+//	-o-background-size: cover;
+//	-moz-background-size: cover;
+//	-webkit-background-size: cover;
+//	background-size: 100% 100%;
 	background-repeat: no-repeat;
+	background-position: center; 
 
 }
 #footer {
