--- a/css/format.css
+++ b/css/format.css
@@ -14,6 +14,8 @@ body {
 //	-o-background-size: cover;
 //	-moz-background-size: cover;
 //	-webkit-background-size: cover;
+    background-position: center; 
+
 //	background-size: 100% 100%;
 	background-repeat: no-repeat;
 
