--- a/css/format.css
+++ b/css/format.css
@@ -9,7 +9,7 @@ h1 {
 }
 body {
 	background-color: black;
-	background-image: url("../images/wallpaper_glow.jpg");
+	background-image: url("../images/wallpaper.jpg");
 //	background-size: cover;
 //	-o-background-size: cover;
 //	-moz-background-size: cover;
