--- a/css/format.css
+++ b/css/format.css
@@ -3,7 +3,8 @@
     src: url(../fonts/ProFont.ttf);
 }
 body {
-	background-image: url("../images/wallpaper.jpg?80172489074");
+	background-image: url("../images/wallpaper.jpg?123");
+    background-image: url("../images/wallpaper.jpg?1234");
 	background-color: black;
     background-position: center; 
 	background-repeat: no-repeat;
