Commented out footer

--- a/css/format.css
+++ b/css/format.css
@@ -10,9 +10,9 @@ body {
 	background-repeat: no-repeat;
 
 }
-#footer {
-	color: cyan;
-}
+//#footer {
+//	color: cyan;
+//}
 #imagesMain {
   padding: 0;
   margin-left: auto;
