--- a/css/format.css
+++ b/css/format.css
@@ -6,8 +6,11 @@ body {
 }
 #flux {
 
-
-
+    padding: 0;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    vertical-align: middle;
 }
 #imagesMain {
   padding: 0;
