Refreshed icons, spacing, bg, viewport

--- a/css/format.css
+++ b/css/format.css
@@ -9,7 +9,7 @@ body {
     vertical-align: middle;
     width: 50%;
     padding: 10px;
-    background-color: grey;
+    background-color: #3c3d3c;
     
 }
 
