--- a/css/format.css
+++ b/css/format.css
@@ -1,8 +1,5 @@
 body {
 	
-    #background-image: url("../images/bg.png");
-    background-position: center;
-	background-repeat: repeat;
     margin: auto;
     margin-top: 0px;
     text-align: center;
@@ -10,7 +7,14 @@ body {
     width: 50%;
     padding: 10px;
     background-color: #3c3d3c;
-    
+
+}
+
+.framed {
+    min-height:95%;
+    border-width:7px;
+    border-style:groove;
+    border-color:var(black);
 }
 
 #imagesMain {
@@ -20,9 +24,9 @@ body {
 }
 
 #imagesMain img {
-  padding: 50px;
-  height: 50px;
-  width: 50px;
+  padding: 56px;
+  height: 56px;
+  width: 56px;
   vertical-align: middle;
 }
 
@@ -96,8 +100,8 @@ body {
 
 #imagesSocial img {
   padding: 5px;
-  height: 25px;
-  width: 25px;
+  height: 36px;
+  width: 36px;
   vertical-align: middle;
 }
 
