--- a/css/format.css
+++ b/css/format.css
@@ -1,21 +1,4 @@
-body {
-	
-    margin: auto;
-    margin-top: 0px;
-    text-align: center;
-    width: 57%;
-    padding: 10px;
-    background-color: #3c3d3c;
-
-}
-
-.framed {
-    min-height:95%;
-    border-width:7px;
-    border-style:solid;
-    border-color:white;
-}
-
+/*begin:text*/
 #title{
      text-transform:uppercase;
      color:white;
@@ -25,117 +8,90 @@ body {
      margin:auto;
      letter-spacing:1em;
 }
+/*end:text*/
 
-#imagesMain {
-  padding: 0;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#imagesMain img {
-  padding: 56px;
-  height: 56px;
-  width: 56px;
-  vertical-align: middle;
-  opacity: 1.0;
-  transition: opacity .55s ease-in-out;
-  -moz-transition: opacity .55s ease-in-out;
-  -webkit-transition: opacity .55s ease-in-out;
-}
-
-#imagesMain img:hover {
-    opacity: .5;
-                  transition: opacity .55s ease-in-out;
-                  -moz-transition: opacity .55s ease-in-out;
-                  -webkit-transition: opacity .55s ease-in-out;
-}
-
-#year {
-    border: 2px solid white;
-    border-image-width: 20px;
-}
-
-#flux {
+/*begin:layout*/
+body{
     margin: auto;
     text-align: center;
-    vertical-align: middle;
+    width: 57%;
+    background-color: #3c3d3c;
+}
+.framed {
+    min-height:95%;
+    border-width:7px;
+    border-style:solid;
+    border-color:white;
+}
+/*end:layout*/
+
+/*begin:elements*/
+#flux {
     border-left: 5px solid red;
 }
 
 #flight {
-    margin: auto;
     margin-top: 12px;
-    text-align: center;
-    vertical-align: middle;
     border-left: 5px solid orange;
 }
 
 #cliffs {
-    margin: auto;
     margin-top: 12px;
-    text-align: center;
-    vertical-align: middle;
     border-left: 5px solid yellow;
 }
 
 #dc {
-    margin: auto;
     margin-top: 12px;
-    text-align: center;
-    vertical-align: middle;
     border-left: 5px solid green;
 }
 
 #fireworks {
-    margin: auto;
     margin-top: 12px;
-    text-align: center;
-    vertical-align: middle;
     border-left: 5px solid blue;
 }
 
 #mondrian {
-    margin: auto;
     margin-top: 12px;
-    text-align: center;
-    vertical-align: middle;
     border-left: 5px solid purple;
 }
 
 #logan {
-    margin: auto;
     margin-top: 12px;
-    text-align: center;
-    vertical-align: middle;
     border-left: 5px solid red;
 }
-
-#imagesSocial {
-  padding: 0;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 75px;
-  text-align: center;
-}
-
-#imagesSocial img {
-  padding: 5px;
-  height: 36px;
-  width: 36px;
-  vertical-align: middle;
+#imagesMain img {
+  padding: 50px;
+  height: 56px;
+  width: 56px;
   opacity: 1.0;
   transition: opacity .55s ease-in-out;
   -moz-transition: opacity .55s ease-in-out;
   -webkit-transition: opacity .55s ease-in-out;
 }
-
+#imagesMain img:hover {
+    opacity: .5;
+        transition: opacity .55s ease-in-out;
+        -moz-transition: opacity .55s ease-in-out;
+        -webkit-transition: opacity .55s ease-in-out;
+}
+#imagesSocial img {
+  height: 36px;
+  width: 36px;
+  padding: 5px;
+  opacity: 1.0;
+  transition: opacity .55s ease-in-out;
+  -moz-transition: opacity .55s ease-in-out;
+  -webkit-transition: opacity .55s ease-in-out;
+}
 #imagesSocial img:hover {
     opacity: .5;
-                  transition: opacity .55s ease-in-out;
-                  -moz-transition: opacity .55s ease-in-out;
-                  -webkit-transition: opacity .55s ease-in-out;
+        transition: opacity .55s ease-in-out;
+        -moz-transition: opacity .55s ease-in-out;
+        -webkit-transition: opacity .55s ease-in-out;
 }
+/*end:elements*/
 
+/*begin:effects*/
 .fade-in {
   animation: fadeIn ease 10s;
   -webkit-animation: fadeIn ease 10s;
@@ -186,6 +142,4 @@ body {
   100% {
     opacity:1;
 }
-
-
-
+/*end:effects*/
