Comments/title/typo

--- a/css/format.css
+++ b/css/format.css
@@ -1,3 +1,5 @@
+/*CONSIDER * for default text values; element good for single use, class for multiple*/
+
 /*begin:text*/
 #title{
      text-transform:uppercase;
