--- a/css/format.css
+++ b/css/format.css
@@ -1,5 +1,3 @@
-/*CONSIDER * for default text values; element good for single use, class for multiple*/
-
 /*begin:text*/
 #title{
      text-transform:uppercase;
@@ -16,10 +14,9 @@
 body{
     margin: auto;
     text-align: center;
-    width: 57%;
-    background-color: #3c3d3c;
+    background:linear-gradient(#3c3d3c, #1e1e1e);
 }
-.framed {
+.framed{
     min-height:95%;
     border-width:7px;
     border-style:solid;
@@ -28,40 +25,36 @@ body{
 /*end:layout*/
 
 /*begin:elements*/
-#flux {
-    border-left: 5px solid red;
-}
 
-#flight {
+.feed{
     margin-top: 12px;
-    border-left: 5px solid orange;
+    margin-bottom: 12px;
 }
-
-#cliffs {
-    margin-top: 12px;
-    border-left: 5px solid yellow;
+.red{
+    border-color:red;
+    border-left: 7px solid red;
 }
-
-#dc {
-    margin-top: 12px;
-    border-left: 5px solid green;
+.orange{
+    border-color:orange;
+    border-left: 7px solid orange;
 }
-
-#fireworks {
-    margin-top: 12px;
-    border-left: 5px solid blue;
+.yellow{
+    border-color:yellow;
+    border-left: 7px solid yellow;
 }
-
-#mondrian {
-    margin-top: 12px;
-    border-left: 5px solid purple;
+.green{
+    border-color:green;
+    border-left: 7px solid green;
 }
-
-#logan {
-    margin-top: 12px;
-    border-left: 5px solid red;
+.blue{
+    border-color:blue;
+    border-left: 7px solid blue;
 }
-#imagesMain img {
+.purple{
+    border-color:purple;
+    border-left: 7px solid purple;
+}
+#iconsLarge img {
   padding: 50px;
   height: 56px;
   width: 56px;
@@ -70,13 +63,13 @@ body{
   -moz-transition: opacity .55s ease-in-out;
   -webkit-transition: opacity .55s ease-in-out;
 }
-#imagesMain img:hover {
+#iconsLarge img:hover {
     opacity: .5;
         transition: opacity .55s ease-in-out;
         -moz-transition: opacity .55s ease-in-out;
         -webkit-transition: opacity .55s ease-in-out;
 }
-#imagesSocial img {
+#iconsSmall img {
   height: 36px;
   width: 36px;
   padding: 5px;
@@ -85,7 +78,7 @@ body{
   -moz-transition: opacity .55s ease-in-out;
   -webkit-transition: opacity .55s ease-in-out;
 }
-#imagesSocial img:hover {
+#iconsSmall img:hover {
     opacity: .5;
         transition: opacity .55s ease-in-out;
         -moz-transition: opacity .55s ease-in-out;
@@ -94,7 +87,7 @@ body{
 /*end:elements*/
 
 /*begin:effects*/
-.fade-in {
+.fade-in{
   animation: fadeIn ease 10s;
   -webkit-animation: fadeIn ease 10s;
   -moz-animation: fadeIn ease 10s;
@@ -109,7 +102,6 @@ body{
     opacity:1;
   }
 }
-
 @-moz-keyframes fadeIn {
   0% {
     opacity:0;
@@ -118,7 +110,6 @@ body{
     opacity:1;
   }
 }
-
 @-webkit-keyframes fadeIn {
   0% {
     opacity:0;
@@ -127,7 +118,6 @@ body{
     opacity:1;
   }
 }
-
 @-o-keyframes fadeIn {
   0% {
     opacity:0;
@@ -136,7 +126,6 @@ body{
     opacity:1;
   }
 }
-
 @-ms-keyframes fadeIn {
   0% {
     opacity:0;
