--- a/style/style.css
+++ b/style/style.css
@@ -23,6 +23,9 @@ body{
     border-style:solid;
     border-color:white;
 }
+.framed *{
+    max-width:100%;
+}
 /*end:layout*/
 
 /*begin:elements*/
