--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,26 @@
+/*begin:text*/
+
 @font-face {
   font-family: 'Lato';
   src: url('fonts/Lato-Light.ttf') format("truetype");
 }
+
+#microblog
+        {
+            position: absolute;
+            font-size: 20px;
+            font-family: 'Lato';
+            padding: 8px;
+            color: white;
+            border-style: solid;
+            border-radius: 20px;
+            left: 30px;
+            top: 30px;
+            opacity: 1.0;
+            transition: opacity .55s ease-in-out;
+            -moz-transition: opacity .55s ease-in-out;
+            -webkit-transition: opacity .55s ease-in-out;
+        }
 
 #percentage
         {
@@ -9,14 +28,13 @@
             font-size: 20px;
             font-family: 'Lato';
             padding: 8px;
-            background-color: black;
             color: white;
+            border-style: solid;
             border-radius: 20px;
-            right: 65px;
-            top: 50px;
+            right: 30px;
+            top: 30px;
         }
 
-/*begin:text*/
 #title{
      text-transform:uppercase;
      color:white;
@@ -33,7 +51,7 @@
 body{
     margin:auto;
     text-align:center;
-    background:linear-gradient(#3c3d3c, #1e1e1e);
+    background:linear-gradient(#c0c0c0, #1e1e1e);
 }
 .framed{
     min-height:95%;
@@ -113,6 +131,12 @@ body{
         -moz-transition: opacity .55s ease-in-out;
         -webkit-transition: opacity .55s ease-in-out;
 }
+#microblog:hover {
+    opacity: .5;
+        transition: opacity .55s ease-in-out;
+        -moz-transition: opacity .55s ease-in-out;
+        -webkit-transition: opacity .55s ease-in-out;
+}
 /*end:elements*/
 
 /*begin:effects*/
@@ -163,4 +187,3 @@ body{
     opacity:1;
 }
 /*end:effects*/
-
