--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,9 @@
             font-size: 20px;
             font-family: 'Lato';
             padding: 8px;
-            color: white;
+            background-color: rgba(255,255,255,.5);
+            color: black;
+            border: 3px solid white;
             border-style: solid;
             border-radius: 20px;
             left: 30px;
@@ -59,10 +61,29 @@
             -webkit-transition: opacity .55s ease-in-out;
         }
 
+.button {
+  font-family: 'Lato';
+  font-size:18px;
+  background-color: rgba(255,255,255,.5);
+  color: black;
+  border: 2px solid white;
+  border-radius: 12px;
+  transition: opacity .55s ease-in-out;
+  -moz-transition: opacity .55s ease-in-out;
+  -webkit-transition: opacity .55s ease-in-out;
+}
+
+.buttonHover:hover {
+  opacity: .5;
+      transition: opacity .55s ease-in-out;
+      -moz-transition: opacity .55s ease-in-out;
+      -webkit-transition: opacity .55s ease-in-out;
+}
+
 #title{
      text-transform:uppercase;
      color:white;
-     font-size:25px;
+     font-size:30px;
      font-family: 'Lato';
      display:block;
      margin:auto;
