--- a/style/style.css
+++ b/style/style.css
@@ -51,7 +51,7 @@
 }
 #resume img
         {
-            width: 3.9%;
+            width: 63px;
             position: relative;
             padding: 8px;
             right: 1px;
