--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: 'Lato';
-  src: url('fonts/Lato-Light.ttf') format("truetype");
+  src: url('fonts/Lato-Hairline.ttf') format("truetype");
 }
 
 #microblog
