--- a/style/style.css
+++ b/style/style.css
@@ -70,7 +70,10 @@ a {
     margin:auto;
 }
 #portrait{
-    margin:120px;
+    -webkit-transform: scale(.6,.6);
+    margin:0px;
+    min-height: 12px;
+    vertical-align:middle;
 }
 .feed{
     margin-top: 12px;
@@ -140,7 +143,7 @@ a {
     -webkit-transition: opacity .55s ease-in-out;
 }
 #iconsLarge img {
-  padding: 55px;
+  padding: 42px;
   width: 70px;
   opacity: 1.0;
   transition: opacity .55s ease-in-out;
@@ -154,7 +157,7 @@ a {
         -webkit-transition: opacity .55s ease-in-out;
 }
 #iconsSmall img {
-  padding: 5px;
+  padding: 10px;
   width: 50px;
   opacity: 1.0;
   margin-top: 50px;
