Gradient/repo cards compact

--- a/style/style.css
+++ b/style/style.css
@@ -51,7 +51,7 @@
 body {
     margin:auto;
     text-align:center;
-    background:linear-gradient(#c0c0c0, #1e1e1e);
+    background:linear-gradient(#c0c0c0, #909090);
 }
 .framed {
     min-height:95%;
