--- a/style/style.css
+++ b/style/style.css
@@ -51,7 +51,7 @@
 body {
     margin:auto;
     text-align:center;
-    background:linear-gradient(#c0c0c0, #909090);
+    background:#757575;
 }
 .framed {
     min-height:95%;
