--- a/style/style.css
+++ b/style/style.css
@@ -1,74 +1,65 @@
 /*begin:text*/
 @font-face {
-  font-family: 'HelveticaUltraLight';
-  src: url('fonts/HelveticaNeueUltraLight.ttf') format("truetype");
+  font-family: "HelveticaUltraLight";
+  src: url("fonts/HelveticaNeueUltraLight.ttf") format("truetype");
 }
 @font-face {
   font-family: "HelveticaThin";
-  src: url('fonts/HelveticaNeue-Thin.otf') format("opentype");
+  src: url("fonts/HelveticaNeue-Thin.otf") format("opentype");
 }
-#microblog {
-        max-width: 100px;
-        font-size: 18px;
-        font-family: 'HelveticaThin';
-        padding: 8px;
-        background-color: #e2e2e2;
-        color: #555555;
-        border-radius: 10px;
-          position: relative;
-  text-align: center;
-margin: auto;
-        margin-bottom: -25px;
-        	float: right;
-bottom: 55px;
-right: 17px;
-        opacity: 1.0;
-        transition: opacity .25s ease-in-out;
-        -moz-transition: opacity .25s ease-in-out;
-        -webkit-transition: opacity .25s ease-in-out;
-    }
+#blog {
+  max-width: 100px;
+  font-size: 18px;
+  font-family: "HelveticaThin";
+  padding: 8px;
+  background-color: #e2e2e2;
+  color: #333333;
+  border-radius: 10px;
+  position: relative;
+  margin: auto;
+  margin-bottom: -25px;
+  float: right;
+  bottom: 55px;
+  right: 17px;
+  opacity: 1;
+  transition: opacity 0.25s ease-in-out;
+  -moz-transition: opacity 0.25s ease-in-out;
+  -webkit-transition: opacity 0.25s ease-in-out;
+}
 #percentage {
-    position: fixed;
-    font-size: 18px;
-    font-family: 'HelveticaThin';
-    padding: 8px;
-    background-color: #e2e2e2;
-    color: #555555;
-    border: 1px;
-    border-color: #e2e2e2;
-    border-style: solid;
-    border-radius: 10px;
-    right: 30px;
-    top: 14.5px;
-    opacity: 0;
-}
-
-#resume {
-    text-align:left;
+  position: fixed;
+  font-size: 18px;
+  font-family: "HelveticaThin";
+  padding: 8px;
+  background-color: #e2e2e2;
+  color: #333333;
+  border-radius: 10px;
+  right: 30px;
+  top: 14.5px;
+  opacity: 0;
 }
 #title {
-     text-transform:uppercase;
-     color:#555555;
-     font-size:30px;
-     font-family: 'HelveticaUltraLight';
+  text-transform: uppercase;
+  color: #333333;
+  font-size: 30px;
+  font-family: "HelveticaUltraLight";
 }
-
 /*end:text*/
 
 /*begin:layout*/
 body {
-    margin: auto;
-    background: #cccccc;
+  margin: auto;
+  background: #cccccc;
 }
 .framed {
-    min-height:95%;
-    border-width:14.5px;
-    border-style:solid;
-    border-color:#e2e2e2;
-    border-radius: 25px;
+  min-height: 95%;
+  border-width: 14.5px;
+  border-style: solid;
+  border-color: #e2e2e2;
+  border-radius: 25px;
 }
 a {
-    text-decoration:none;
+  text-decoration: none;
 }
 /*end:layout*/
 .serv {
@@ -83,203 +74,89 @@ a {
   flex: 2 0 21%;
 }
 .container img {
-            border-radius: 10px;
+  border-radius: 10px;
 }
 .container {
-  transition: opacity .25s ease-in-out;
-  -moz-transition: opacity .25s ease-in-out;
-  -webkit-transition: opacity .25s ease-in-out;
-}
-.serv .container {
-  justify-content: space-between; 
+  justify-content: space-between;
+  transition: opacity 0.25s ease-in-out;
+  -moz-transition: opacity 0.25s ease-in-out;
+  -webkit-transition: opacity 0.25s ease-in-out;
 }
 .serv p {
   font-size: 20px;
-  font-family: 'HelveticaThin';
-  color: #555555;
+  font-family: "HelveticaThin";
+  color: #333333;
   margin-top: 5px;
 }
-
-.lastItems div{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: left;
-  row-gap: 83px;
-  margin-right: 44px;
-  margin-left: 44px;
-  margin-right: auto;
-}
-
 /*begin:elements*/
-.flex-item {
-    display:flex;
-    justify-content: center;
-    align-items: center;
+.title-serv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.flex-item img{
-    padding-top: 70px;
-    padding-left: 16px;
-    padding-right: 16px;
-    flex-grow:0;
-    flex-shrink:0;
-    max-width: 350px;
-    flex: 0 0 350px;
+.title-serv img {
+  padding-top: 70px;
+  padding-left: 16px;
+  padding-right: 16px;
+  flex-grow: 0;
+  flex-shrink: 0;
+  max-width: 350px;
+  flex: 0 0 350px;
 }
-
-.flex-buttons {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 100px;
+.serv-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 100px;
 }
-.flex-buttons img{
-  flex-grow:0;
-  flex-shrink:0;
+.serv-buttons img {
+  flex-grow: 0;
+  flex-shrink: 0;
   max-width: 13px;
   margin: 98px;
   flex: 0 0 13px;
 }
-.feed{
-    margin-top: 12px;
-    margin-bottom: 12px;
-}
-.feedItem{
-}
-.button {
-  font-family: 'HelveticaUltraLight';
-  font-size:16px;
-  background-color: rgba(255,255,255,.5);
-  color: black;
-  border: 1px solid white;
-  border-radius: 12px;
-  transition: opacity .25s ease-in-out;
-  -moz-transition: opacity .25s ease-in-out;
-  -webkit-transition: opacity .25s ease-in-out;
-}
-.buttonHover:hover {
-  opacity: .75;
-      transition: opacity .25s ease-in-out;
-      -moz-transition: opacity .25s ease-in-out;
-      -webkit-transition: opacity .25s ease-in-out;
-}
 .container:hover {
-  opacity: .75;
-      transition: opacity .25s ease-in-out;
-      -moz-transition: opacity .25s ease-in-out;
-      -webkit-transition: opacity .25s ease-in-out;
+  opacity: 0.75;
+  transition: opacity 0.25s ease-in-out;
+  -moz-transition: opacity 0.25s ease-in-out;
+  -webkit-transition: opacity 0.25s ease-in-out;
 }
 .reset img {
   max-width: 20px;
   position: relative;
   bottom: -46px;
   margin-top: 0px;
-  transition: opacity .55s ease-in-out;
   display: block;
-margin-left: auto;
-margin-right: auto;
-  -moz-transition: opacity .55s ease-in-out;
-  -webkit-transition: opacity .55s ease-in-out;
-  
+  margin-left: auto;
+  margin-right: auto;
 }
 #vCard img {
-  width: 50px;
-position: relative;
-padding: 8px;
-left: 8px;
-bottom: 4px;
-  transition: opacity .25s ease-in-out;
-  -moz-transition: opacity .25s ease-in-out;
-  -webkit-transition: opacity .25s ease-in-out;
+  max-width: 50px;
+  position: relative;
+  padding: 8px;
+  left: 8px;
+  bottom: 4px;
+  transition: opacity 0.25s ease-in-out;
+  -moz-transition: opacity 0.25s ease-in-out;
+  -webkit-transition: opacity 0.25s ease-in-out;
 }
-
-#iconsSmall img {
-  padding: 10px;
-  width: 50px;
-  opacity: 1.0;
-  margin-top: 50px;
-  margin-bottom:120px;
-  transition: opacity .55s ease-in-out;
-  -moz-transition: opacity .55s ease-in-out;
-  -webkit-transition: opacity .55s ease-in-out;
-}
-#iconsSmall img:hover {
-    opacity: .75;
-        transition: opacity .55s ease-in-out;
-        -moz-transition: opacity .55s ease-in-out;
-        -webkit-transition: opacity .55s ease-in-out;
-}
-#microblog:hover {
-    opacity: .75;
-        transition: opacity .25s ease-in-out;
-        -moz-transition: opacity .25s ease-in-out;
-        -webkit-transition: opacity .25s ease-in-out;
+#blog:hover {
+  opacity: 0.75;
+  transition: opacity 0.25s ease-in-out;
+  -moz-transition: opacity 0.25s ease-in-out;
+  -webkit-transition: opacity 0.25s ease-in-out;
 }
 #vCard img:hover {
-    opacity: .75;
-        transition: opacity .25s ease-in-out;
-        -moz-transition: opacity .25s ease-in-out;
-        -webkit-transition: opacity .25s ease-in-out;
-}
-#resume img:hover {
-    opacity: .75;
-        transition: opacity .55s ease-in-out;
-        -moz-transition: opacity .55s ease-in-out;
-        -webkit-transition: opacity .55s ease-in-out;
+  opacity: 0.75;
+  transition: opacity 0.25s ease-in-out;
+  -moz-transition: opacity 0.25s ease-in-out;
+  -webkit-transition: opacity 0.25s ease-in-out;
 }
 #color-logo {
-    margin-bottom: 2.5px;
+  margin-bottom: 2.5px;
 }
 #color-buttons img {
-    margin-bottom: 104px;
+  margin-bottom: 104px;
 }
 /*end:elements*/
-
-/*begin:effects*/
-.fade-in {
-  animation: fadeIn ease 10s;
-  -webkit-animation: fadeIn ease 10s;
-  -moz-animation: fadeIn ease 10s;
-  -o-animation: fadeIn ease 10s;
-  -ms-animation: fadeIn ease 10s;
-}
-@keyframes fadeIn {
-  0% {
-    opacity:0;
-  }
-  100% {
-    opacity:1;
-  }
-}
-@-moz-keyframes fadeIn {
-  0% {
-    opacity:0;
-  }
-  100% {
-    opacity:1;
-  }
-}
-@-webkit-keyframes fadeIn {
-  0% {
-    opacity:0;
-  }
-  100% {
-    opacity:1;
-  }
-}
-@-o-keyframes fadeIn {
-  0% {
-    opacity:0;
-  }
-  100% {
-    opacity:1;
-  }
-}
-@-ms-keyframes fadeIn {
-  0% {
-    opacity:0;
-  }
-  100% {
-    opacity:1;
-}
-/*end:effects*/
