--- a/style/style.css
+++ b/style/style.css
@@ -1,16 +1,19 @@
+:root {
+  font-variant-ligatures: none;
+}
 /*begin:text*/
 @font-face {
-  font-family: "HelveticaUltraLight";
-  src: url("fonts/HelveticaNeueUltraLight.ttf") format("truetype");
+  font-family: "HelveticaNowDisplay-Hairline";
+  src: url("fonts/HelveticaNowDisplay-Hairline.ttf") format("truetype");
 }
 @font-face {
-  font-family: "HelveticaThin";
-  src: url("fonts/HelveticaNeue-Thin.otf") format("opentype");
+  font-family: "TTInterfaces-Thin";
+  src: url("fonts/TTInterfaces-Thin.ttf") format("truetype");
 }
 #blog {
   max-width: 100px;
   font-size: 18px;
-  font-family: "HelveticaThin";
+  font-family: "TTInterfaces-Thin";
   padding: 8px;
   background-color: #e2e2e2;
   color: #000000;
@@ -19,7 +22,7 @@
   margin: auto;
   margin-bottom: -25px;
   float: right;
-  bottom: 55px;
+  bottom: 54px;
   right: 17px;
   opacity: 1;
   transition: opacity 0.25s ease-in-out;
@@ -29,33 +32,33 @@
 #percentage {
   position: fixed;
   font-size: 18px;
-  font-family: "HelveticaThin";
+  font-family: "TTInterfaces-Thin";
   padding: 8px;
   background-color: #e2e2e2;
   color: #000000;
   border-radius: 10px;
-  right: 30px;
-  top: 14.5px;
+  right: 31px;
+  top: 16.5px;
   opacity: 0;
 }
 #title {
   text-transform: uppercase;
   color: #000000;
   font-size: 30px;
-  font-family: "HelveticaUltraLight";
+  font-family: "HelveticaNowDisplay-Hairline";
 }
 /*end:text*/
 
 /*begin:layout*/
 body {
   margin: auto;
-  background: #cccccc;
+  background: #CCCCCC;
 }
 .framed {
   min-height: 95%;
   border-width: 14.5px;
   border-style: solid;
-  border-color: #e2e2e2;
+  border-color: #E2E2E2;
   border-radius: 25px;
 }
 a {
@@ -69,8 +72,8 @@ a {
   justify-content: center;
   row-gap: 29.5px;
   column-gap: 83px;
-  margin-right: 87px;
-  margin-left: 87px;
+  margin-right: 86px;
+  margin-left: 86px;
   flex: 2 0 21%;
 }
 .container img {
@@ -84,7 +87,7 @@ a {
 }
 .serv p {
   font-size: 20px;
-  font-family: "HelveticaThin";
+  font-family: "TTInterfaces-Thin";
   color: #000000;
   margin-top: 5px;
 }
@@ -113,7 +116,7 @@ a {
   flex-grow: 0;
   flex-shrink: 0;
   max-width: 13px;
-  margin: 98px;
+  margin: 97px;
   flex: 0 0 13px;
 }
 .container:hover {
@@ -125,7 +128,7 @@ a {
 .reset img {
   max-width: 20px;
   position: relative;
-  bottom: -46px;
+  bottom: -44px;
   margin-top: 0px;
   display: block;
   margin-left: auto;
