--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@
 /*begin:text*/
 @font-face {
   font-family: "HelveticaNowDisplay-Hairline";
-  src: url("fonts/HelveticaNowDisplay-Hairline.ttf") format("truetype");
+  src: url("fonts/HelveticaNowVar.ttf") format("truetype");
 }
 @font-face {
   font-family: "TTInterfaces-Thin";
@@ -46,6 +46,7 @@
   color: #000000;
   font-size: 30px;
   font-family: "HelveticaNowDisplay-Hairline";
+  font-weight: 1;
 }
 /*end:text*/
 
