--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 :root {
   font-variant-ligatures: none;
 }
+* {-webkit-font-smoothing: antialiased;}
 /*begin:text*/
 @font-face {
   font-family: "Hairline";
