--- a/blog/style/style.css
+++ b/blog/style/style.css
@@ -5,7 +5,7 @@
 @font-face {
   font-family: "Hairline";
   src: url("../../style/fonts/Hairline.ttf") format("truetype");
-  font-weight: 65;
+  font-weight: 66;
 }
 @font-face {
   font-family: "Thin";
@@ -14,10 +14,12 @@
 /*begin:layout*/
 #title {
   color: #000000;
-  font-size: 37.5px;
+  font-size: 38px;
   font-family: "Hairline";
   margin-top: 100px;
   margin-bottom: 0px;
+  letter-spacing: 8px;
+  word-spacing: -4px;
 }
 body {
   margin: auto;
@@ -32,11 +34,13 @@ body {
   text-align: center;
 }
 .entry {
-  margin-left: 22.5%;
-  margin-right: 22.5%;
+  margin-left: 25%;
+  margin-right: 25%;
   background: #c5c5c5;
-  border-radius: 3px;
-  font-size: 27.5px;
+  border-radius: 5px;
+  font-size: 29px;
+  letter-spacing: 2px;
+  word-spacing: -1px;
   font-family: "Hairline";
 }
 .entry img {
@@ -51,12 +55,14 @@ body {
   padding-top: 23px;
 }
 .contents {
-  font-size: 18px;
+  font-size: 20px;
   text-align: left;
   font-family: "Thin";
+  letter-spacing: 0px;
+  word-spacing: .5px;
   padding-left: 30px;
   padding-right: 30px;
-  padding-bottom: 23px;
+  padding-bottom: 20px;
   text-indent: 50px;
   line-height: 1.75;
 }
