--- a/style/style.css
+++ b/style/style.css
@@ -12,8 +12,8 @@
   src: url("fonts/Thin.ttf") format("truetype");
 }
 #blog {
-  max-width: 100px;
-  font-size: 18px;
+  font-size: 20px;
+  word-spacing: .5px;
   font-family: "Thin";
   padding: 8px;
   background-color: #e2e2e2;
@@ -21,9 +21,8 @@
   border-radius: 10px;
   position: relative;
   margin: auto;
-  margin-bottom: -25px;
   float: right;
-  bottom: 54px;
+  bottom: 56px;
   right: 17px;
   opacity: 1;
   transition: opacity 0.25s ease-in-out;
@@ -32,7 +31,7 @@
 }
 #percentage {
   position: fixed;
-  font-size: 18px;
+  font-size: 20px;
   font-family: "Thin";
   padding: 8px;
   background-color: #e2e2e2;
